--- a/views/blogs/new.ejs
+++ b/views/blogs/new.ejs
@@ -1,8 +1,8 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 
 <div class="container my-5">
     <h1 class="text-center">ADD new Blog</h1>
-    <form method="POST" action="/blog">
+    <form method="POST" action="/b">
         <div class="form-group">
             <label>Title</label>
             <input class="form-control" type="text" name="blog[title]" required>
@@ -19,4 +19,4 @@
     </form>
 </div>
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
