--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -5,7 +5,7 @@
         <div class="row row-cols-2">
             <% userInfo.blogs.forEach(blog => { %>
                 <div class="col col-12 col-md-6 col-lg-4" >
-                    <a href="/<%=blog._id%>" class="card-link">
+                    <a href="/b/<%=blog._id%>" class="card-link">
                         <div class="card">
                             <img src="<%=blog.image%>" class="card-img-top">
                             <div class="card-body">
