--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
         <% if (user) { %>
             <li class="nav-item">
             <li class="nav-item">
-                <a href="/new" class="nav-link">Add Blog</a>
+                <a href="/b/new" class="nav-link">Add Blog</a>
             </li>
                 <a href="/u/<%=user.username%>" class="nav-link text-primary"><%= user.username %></a>
             </li>
