--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
         </div>
         <div class="form-group">
             <label>phone number</label>
-            <input class="form-control" name="user[number]" required type="number">
+            <input class="form-control" name="user[mobile]" required type="number">
         </div>
         <div class="form-group">
             <label>password</label>
