--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -2,11 +2,11 @@
 <% if(userInfo){ %>
     <div class="container-fluid">
         <h1 class="text-center display-1 mb-5">Blogs By <%= userInfo.username %></h1>
-        <div class="row row-cols-2">
+        <div class="row">
             <% userInfo.blogs.forEach(blog => { %>
                 <div class="col col-12 col-md-6 col-lg-4" >
                     <a href="/b/<%=blog._id%>" class="card-link">
-                        <div class="card">
+                        <div class="card" id="">
                             <img src="<%=blog.image%>" class="card-img-top">
                             <div class="card-body">
                                 <h3 class="card-title text-center"><%= blog.title %></h3>
