Added WYSIWYG editor

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
             <div class="card-body">
                 <h3 class="card-title"><%= blog.title %></h3>
                 <p class="text-muted"><%= blog.date.toDateString() %></p>
-                <p class="card-text"><%- blog.body.substring(0, 150) %> ...</p>
+                <p class="card-text"><%= blog.preview %><b>...</b></p>
                 <a href="/b/<%= blog._id %>" class="btn btn-info btn-md">Full Blog</a>
             </div>
         </div>
