--- a/views/blogs/new.ejs
+++ b/views/blogs/new.ejs
@@ -1,5 +1,8 @@
 <%- include("../partials/header") %>
 
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 <div class="container my-5">
     <h1 class="text-center">ADD new Blog</h1>
     <form method="POST" action="/b">
@@ -8,15 +11,45 @@
             <input class="form-control" type="text" name="blog[title]" required>
         </div>
         <div class="form-group">
-            <label>Image link</label>
+            <label>Header Image</label>
             <input class="form-control" type="text" name="blog[image]" required>
         </div>
-        <div class="form-group">
-            <label>Content</label>
-            <textarea class="form-control" name="blog[body]" required></textarea>
-        </div>
-        <input class="btn btn-primary btn-lg" value="Submit" type="submit">
+        <input type="hidden" name="blog[body]">
+        <input type="hidden" name="blog[preview]">
+
+            <div id="editor">
+                <p>Hello World!</p>
+                <p>Some initial <strong>bold</strong> text</p>
+                <p><br></p>
+            </div>
+
+        <input class="btn btn-primary btn-lg my-3" value="Submit" type="submit">
     </form>
 </div>
 
+<script>
+    document.querySelector("form").addEventListener("submit", function(){
+        document.querySelector("input[name='blog[body]'").value = JSON.stringify(quill.getContents());
+        document.querySelector("input[name='blog[preview]']").value = quill.getText(0, 50);
+    });
+    var toolbarOptions = [
+    [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
+    [{ 'font': [] }],
+    ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
+    ['blockquote', 'code-block'],
+    [{ 'list': 'ordered'}, { 'list': 'bullet' }],
+    [{ 'indent': '-1'}, { 'indent': '+1' }],          // outdent/indent
+    [{ 'direction': 'rtl' }],                         // text direction
+    
+    [{ 'color': [] }, { 'background': [] }], [{ 'align': [] }],
+    ['clean'],                                      
+    ["link", "image"]
+];
+    var quill = new Quill('#editor', {
+        modules: {
+            toolbar: toolbarOptions
+        },
+        theme:"snow"
+    });
+</script>
 <%- include("../partials/footer") %>
