--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -1,4 +1,7 @@
 <%- include("../partials/header") %>
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
 <div id="show">
     <div class="card mb-3">
         <% if(user && blog.author.equals(user._id)){ %>
@@ -17,7 +20,8 @@
             <h2 class="card-title display-1"><%= blog.title %></h2>
             <h3 class="text-muted">By <a href="/u/<%= blog.author.username %>" class="card-link"><%= blog.author.username %></a></h3>
             <p class="card-text"><small class="text-muted"><%= blog.date.toDateString() %></small></p>
-            <p class="card-text"><%- blog.body %></p>
+            <div id="view">
+            </div>
         </div>
     </div>
     <div class="card" id="comments">
@@ -55,9 +59,15 @@
                     </li>
                 <% }) %>
             </ul>
-
         </div>
     </div>
 </div>
+
+<script>
+    var quill = new Quill("#view", {
+        readOnly:true,
+    });
+    quill.setContents( (<%- blog.body %>));
+</script>
 
 <%- include("../partials/footer") %>
